# GraphicsProject

./: CMakeLists.txt  Phase 2 Dev Roadmap.md  Project Design Road map.md
src/app/: main.cpp
src/engine/components/: MeshRenderer.hpp  Transform.hpp
src/engine/core/: Application.cpp  Application.hpp  Engine.hpp
src/engine/ecs/: ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  README.md  SystemManager.hpp  World.hpp
src/engine/gl/: Shader.cpp  Shader.hpp
src/engine/platform/: Window.cpp  Window.hpp
src/engine/scripting/: MonoBehaviour.hpp
src/engine/systems/: RenderSystem.hpp
